# rust_web_socket

./: README.md
client/: package.json
client/src/: App.css  App.tsx  index.css  socket.ts
server/: Cargo.toml
server/src/: lobby.rs  main.rs  messages.rs  ws.rs
